compiler/typ/tests/fixtures/diagnostics/0872_gadt_constructor_payload_bool_mismatch_02.ml.infer.expected
File "0872_gadt_constructor_payload_bool_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0872_gadt_constructor_payload_bool_mismatch_02 is not a valid module name.

File "0872_gadt_constructor_payload_bool_mismatch_02.ml", line 5, characters 36-37:
5 | let _ : bool expr_beta = EBool_beta 1
                                        ^
Error: The constant 1 has type int but an expression was expected of type
         bool
