compiler/typ/tests/fixtures/diagnostics/0872_gadt_constructor_payload_bool_mismatch_02.ml
type _ expr_beta =
  | EInt_beta : int -> int expr_beta
  | EBool_beta : bool -> bool expr_beta

let _ : bool expr_beta = EBool_beta 1
